Feat :"Add exchange routes and handler"
